# i18n-check

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Example.md  LICENSE  README.md
.github/workflows/: codeql.yml  cppcheck.yml  doxygen.yml  i18n-check.yml  linux-build.yml  macOS build.yml  macos-unit-test.yml  msvc.yml  msw-build.yml  msw-main.yml  msw-unit-tests.yml  spell-check.yml  unit-tests.yml  unix build.yml
docs/: Doxyfile
docs/manual/: _quarto.yml  _quarto.yml.in  acknowledgements.qmd  building.qmd  checks.qmd  cites.bib  examples.qmd  github-action.qmd  index.qmd  options.qmd  samples.qmd  suppression.qmd
docs/manual/R/: appdown.r
docs/manual/command-line/: checks.qmd  examples.qmd  options.qmd  reviewing-output.qmd  samples.qmd
docs/manual/gui/: editing.qmd  new-project.qmd  options.qmd  reviewing-output.qmd  tools.qmd
docs/manual/latex/: default.tex  preamble.tex
gui/: CMakeLists.txt  Info.plist.in  app-logo.icns  cuneiform.rc  i18ngui.rc  quneiform.rc  resource.h  resource.h.in
locale/es/: i18n-check.po
samples/: subset.cpp
src/: Doxyfile  analyze.cpp  analyze.h  char_traits.h  cpp_i18n_review.cpp  cpp_i18n_review.h  csharp_i18n_review.cpp  csharp_i18n_review.h  donttranslate.h  extract_text.h  i18n_review.cpp  i18n_review.h  i18n_string_util.cpp  i18n_string_util.h  input.cpp  input.h  main.cpp  po_file_review.cpp  po_file_review.h  pseudo_translate.cpp  pseudo_translate.h  rc_file_review.cpp  rc_file_review.h  string_util.h  translation_catalog_review.cpp  translation_catalog_review.h  unicode_extract_text.h
src/gui/: app_options.cpp  app_options.h  convert_string_dlg.cpp  convert_string_dlg.h  datamodel.cpp  datamodel.h  i18napp.cpp  i18napp.h  i18nframe.cpp  i18nframe.h  insert_translator_comment_dlg.cpp  insert_translator_comment_dlg.h  insert_transmacro_dlg.cpp  insert_transmacro_dlg.h  main.cpp  projectdlg.cpp  projectdlg.h  string_info_dlg.cpp  string_info_dlg.h
tests/: CMakeLists.txt  cpptests.cpp  csharptests.cpp  decodetests.cpp  i18nstringtests.cpp  potests.cpp  rctests.cpp  stringutiltests.cpp  testingmain.cpp
